<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    tools:context=".AddProductPage">

    <!--Back Button-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:background="@android:color/transparent"
                    android:id="@+id/backBtn"
                    android:layout_marginTop="5dp"
                    />

                <!--Add Product Header-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Product"
                    android:layout_alignParentTop="true"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:id="@+id/addHeader"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
                    />

                <!--Add Image Button-->
                <ImageButton
                    android:layout_width="155dp"
                    android:layout_height="155dp"
                    android:id="@+id/addImage"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/addHeader"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_baseline_add_24"
                    />

                <!--Name Header -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addName"
                    android:layout_below="@+id/addImage"
                    android:layout_marginTop="20dp"
                    android:text="@string/addName"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <!--Name-->
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/newName"
                    android:layout_below="@+id/addName"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    />

                <!--Expiry Date Header -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addDate"
                    android:layout_below="@+id/newName"
                    android:layout_marginTop="30dp"
                    android:text="@string/addDate"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <!--Add expiry date-->
                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/datePickerBtn"
                    android:layout_below="@+id/newName"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/background_dark"
                    android:textSize="20sp"
                    style="?android:spinnerStyle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:onClick="openDatePicker"
                    />

                <!--Description Header -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addDescription"
                    android:layout_below="@+id/addDate"
                    android:layout_marginTop="30dp"
                    android:text="@string/addDescription"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <!--Add description textBox-->
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/newDesc"
                    android:layout_below="@+id/addDescription"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    />

                <!--Category Header-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addCategory"
                    android:layout_below="@+id/newDesc"
                    android:layout_marginTop="30dp"
                    android:text="@string/addCategory"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <!--New Category through spinner-->
                <Spinner
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/newCategory"
                    android:layout_below="@id/newDesc"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="30dp"
                    />

                <!--Location Header-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addLocation"
                    android:layout_below="@+id/newCategory"
                    android:layout_marginTop="30dp"
                    android:text="@string/addLocation"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <!--New Category through spinner-->
                <Spinner
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/newLocation"
                    android:layout_below="@id/newCategory"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="30dp"
                    />

                <!--Cancel Button-->
                <Button
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:id="@+id/cancelBtn"
                    android:layout_below="@id/newLocation"
                    android:layout_marginTop="50dp"
                    android:text="@string/cancelBtn"
                    android:textSize="20dp"
                    android:onClick="cancel"
                    />

                <!--Save Button-->
                <Button
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:id="@+id/saveBtn"
                    android:layout_below="@id/newLocation"
                    android:layout_marginTop="50dp"
                    android:text="@string/saveBtn"
                    android:layout_alignParentEnd="true"
                    android:textSize="20dp"
                    android:onClick="save"
                    />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>




</FrameLayout>