<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEF3EF"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        tools:context=".MainActivity"> <!--Scroll view-->


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--Profile Header-->
                <TextView
                    android:id="@+id/profileHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/ProfileHeader"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold" />


                <!--Edit Button-->
                <ImageButton
                    android:id="@+id/editBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:src="@drawable/ic_baseline_edit_24"
                    tools:ignore="SpeakableTextPresentCheck" />

                <!--User Profile Picture-->
                <RelativeLayout
                    android:id="@+id/section"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/profileHeader"
                    android:layout_marginTop="50dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/UserPicture"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter" />

                </RelativeLayout>


                <!--User Name-->
                <TextView
                    android:id="@+id/UserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/section"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <!--User ID Header -->
                <TextView
                    android:id="@+id/uidHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/UserName"
                    android:layout_marginTop="40dp"
                    android:text="@string/uidHeader"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <!--User ID  -->
                <TextView
                    android:id="@+id/uid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/UserName"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="40dp"
                    android:textSize="25dp" />

                <!--Email Header -->
                <TextView
                    android:id="@+id/emailHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/uidHeader"
                    android:layout_marginTop="40dp"
                    android:text="@string/EmailHeader"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <!--Email  -->
                <TextView
                    android:id="@+id/emailProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/uidHeader"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="40dp"
                    android:textSize="25dp" />

                <!--Allergens Header -->
                <TextView
                    android:id="@+id/allergenHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emailHeader"
                    android:layout_marginTop="40dp"
                    android:text="@string/Allergens"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <!--PhoneNumber  -->
                <TextView
                    android:id="@+id/allergen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/allergenHeader"
                    android:layout_marginTop="20dp"
                    android:textSize="25dp" />
                <!--Log Out Button-->
                <Button
                    android:id="@+id/logOutBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/allergen"
                    android:layout_centerInParent="true"
                    android:background="#fff"
                    android:drawableLeft="@drawable/ic_google_logo"
                    android:drawablePadding="10dp"
                    android:text="sign out" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>